raspberry-pi-playbooks/cluster/kubernetes/traefik/traefik-ingressroute-template.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.kubecluster`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: local-cert
